tests/ui/form_model/fail_generic.rs
#[derive(Clone, calmui::form::FormModel)]
struct GenericForm<T> {
    value: T,
}

fn main() {}
